Добавил обработку ошибок через middleware Добавил проверку токена с которым идет запрос в middleware
