# app/reservation-service/internal/transport/auth-handler.go
@@ -1,35 +1,33 @@
 package transport
 
 import (
-	"strings"
-
 	"github.com/gofiber/fiber/v3"
-	"github.com/ztrue/tracerr"
 
+	"bookit/pkg/errors"
 	"bookit/pkg/iam"
 )
 
 func Signin(ctx fiber.Ctx) error {
 	code, ok := ctx.Queries()["code"]
 	if !ok {
-		return fiber.ErrForbidden
+		return errors.New("code not found", errors.WithHttpStatus(fiber.StatusForbidden))
 	}
 	state, ok := ctx.Queries()["state"]
 	if !ok {
-		return fiber.ErrForbidden
+		return errors.New("state not found", errors.WithHttpStatus(fiber.StatusForbidden))
 	}
 	token, err := iam.Gist().GetOAuthToken(code, state)
 	if err != nil {
-		return tracerr.Wrap(err)
+		return errors.Wrap(err, errors.WithHttpStatus(fiber.StatusForbidden))
 	}
 	return ctx.JSON(token)
 }
 
 func User(ctx fiber.Ctx) error {
-	token := strings.Replace(ctx.Get("Authorization"), "Bearer ", "", 1)
+	token := getAccessToken(ctx)
 	claims, err := iam.Gist().ParseJwtToken(token)
 	if err != nil {
-		return tracerr.Wrap(err)
+		return errors.Wrap(err, errors.WithHttpStatus(fiber.StatusForbidden))
 	}
 	return ctx.JSON(claims.User)
 }
